almost v1. need to test

--- a/LearnREST3LO.ipynb
+++ b/LearnREST3LO.ipynb
@@ -5,66 +5,120 @@
    "execution_count": null,
    "id": "ccdc4877-4853-4543-b581-8f68b43a3c93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "in 45 minutes\n",
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31m\u001b[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on http://127.0.0.1:5310\n",
-      "\u001b[33mPress CTRL+C to quit\u001b[0m\n",
-      "127.0.0.1 - - [29/Feb/2024 11:08:27] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [29/Feb/2024 11:08:27] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "#\n",
     "# This cell demonstrates a Flask Application that makes 3 Legged-Oauth calls to Blackboard Learn.\n",
-    "# Notice how the Config and the import of BbRest to bb in the prior cell are available in this cell.\n",
-    "from flask import Flask\n",
+    "# This is meant for demonstration purposes only. To be complete you would cache the access token,\n",
+    "# and have session management for each user that is using the web application.\n",
+    "from flask import Flask, redirect, request, session, url_for\n",
     "\n",
     "try:\n",
     "    import Config\n",
     "except ModuleNotFoundError:\n",
     "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "\n",
+    "import requests\n",
     "\n",
-    "from bbrest import BbRest\n",
-    "bb = BbRest(Config.config['key'], Config.config['secret'], Config.config['url'])\n",
-    "bbexp = bb.expiration()\n",
-    "print(bbexp)\n",
+    "# Configuration\n",
+    "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
+    "SECRET = Config.config['secret']\n",
+    "BLACKBOARD_DOMAIN = Config.config['blackboard_domain']\n",
+    "THIS_DOMAIN = Config.config['this_domain']\n",
+    "REDIRECT_URI = f'https://{THIS_DOMAIN}/callback'\n",
+    "AUTH_BASE_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/authorizationcode'\n",
+    "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
+    "A_USER_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
     "\n",
+    "# Import the 'datetime' module to work with date and time\n",
+    "import datetime\n",
+    "# Get the current date and time\n",
+    "now = datetime.datetime.now()\n",
+    "# Create a datetime object representing the current date and time\n",
+    "# Display a message indicating what is being printed\n",
+    "print(\"Current date and time : \")\n",
+    "# Print the current date and time in a specific format\n",
+    "print(now.strftime(\"%Y-%m-%d %H:%M:%S\"))\n",
+    "\n",
+    "\"\"\" We don't do any 2LO in this notebook. This code is here for reference.\n",
+    "def get_access_token(key, secret):\n",
+    "    #Authenticate with Blackboard Learn REST API using 2-legged OAuth.\n",
+    "    #grant_type is client_credentials.\n",
+    "    payload = {\n",
+    "        'grant_type': 'client_credentials',\n",
+    "    }\n",
+    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload)\n",
+    "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
+    "    \n",
+    "    print(\"Authentication successful.\")\n",
+    "    return response.json().get('access_token')\n",
+    "\"\"\"\n",
+    "\n",
+    "def get_user(access_token, user_url):\n",
+    "    \"\"\"Make a REST API call to get a user.\"\"\"\n",
+    "    headers = {\n",
+    "        'Authorization': f'Bearer {access_token}',\n",
+    "    }\n",
+    "    response = requests.get(user_url, headers=headers)\n",
+    "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
+    "    \n",
+    "    return response.json()\n",
+    "    \n",
     "app = Flask(__name__)\n",
+    "app.secret_key = 'n0w1sth3t0me!'  # Change this to a random secret key\n",
     "\n",
     "@app.route('/')\n",
     "def hello_world():\n",
-    "    return 'Hello, 3LO world!'\n",
+    "    return 'Hello there, 3LO world!'\n",
     "\n",
-    "@app.route('/courses')\n",
-    "def users():\n",
-    "    r = bb.GetCourses()\n",
-    "    return(r.json())\n",
+    "@app.route('/auser')\n",
+    "def auser():\n",
+    "    try:\n",
+    "        access_token = session.get('access_token')\n",
+    "        if not access_token:\n",
+    "            return 'Access token is missing. Please log in again.'\n",
+    "        \n",
+    "        # Use access token to get user's courses\n",
+    "        user = get_user(access_token, A_USER_URL)\n",
+    "        \n",
+    "        print(\"A user fetched successfully.\")\n",
+    "        return(user)  # You might want to format this output or handle it differently depending on your needs\n",
+    "    except requests.exceptions.HTTPError as err:\n",
+    "        print(f\"HTTP error occurred: {err}\")\n",
+    "    except Exception as err:\n",
+    "        print(f\"An error occurred: {err}\")\n",
+    "\n",
+    "@app.route('/login')\n",
+    "def login():\n",
+    "    \"\"\"Redirect user to Blackboard authorization page.\"\"\"\n",
+    "    auth_url = f\"{AUTH_BASE_URL}?response_type=code&client_id={KEY}&redirect_uri={REDIRECT_URI}\"\n",
+    "    return redirect(auth_url)\n",
+    "\n",
+    "@app.route('/callback')\n",
+    "def callback():\n",
+    "    \"\"\"Exchange code for a token and fetch user's courses.\"\"\"\n",
+    "    code = request.args.get('code')\n",
+    "    token_data = exchange_code_for_token(code)\n",
+    "    session['access_token'] = token_data.get('access_token')\n",
+    "    return redirect(url_for('auser'))\n",
+    "\n",
+    "def exchange_code_for_token(code):\n",
+    "    #Exchange authorization code for access token.\n",
+    "    #grant_type is authorization_code\n",
+    "    payload = {\n",
+    "        'grant_type': 'authorization_code',\n",
+    "        'code': code,\n",
+    "        'redirect_uri': REDIRECT_URI,\n",
+    "        'client_id': KEY,\n",
+    "        'client_secret': SECRET\n",
+    "    }\n",
+    "    response = requests.post(TOKEN_URL, auth=(KEY, SECRET), data=payload)\n",
+    "    print(response.json())\n",
+    "    return response.json()\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(port=5310)"
+    "    app.run(port=5310)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ec58dd79-52f7-4ce9-a022-6ae4ecd95dec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
