--- a/LearnREST2LO.ipynb
+++ b/LearnREST2LO.ipynb
@@ -18,9 +18,9 @@
     "# Configuration\n",
     "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
     "SECRET = Config.config['secret']\n",
-    "BLACKBOARD_DOMAIN = Config.config['domain']\n",
+    "BLACKBOARD_DOMAIN = Config.config['blackboard_domain']\n",
     "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
-    "USERS_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
+    "A_USER_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
     "\n",
     "def get_access_token(key, secret):\n",
     "    \"\"\"Authenticate with Blackboard Learn REST API using 2-legged OAuth.\"\"\"\n",
@@ -33,12 +33,12 @@
     "    print(\"Authentication successful.\")\n",
     "    return response.json().get('access_token')\n",
     "\n",
-    "def get_user(access_token, users_url):\n",
+    "def get_user(access_token, user_url):\n",
     "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
     "    headers = {\n",
     "        'Authorization': f'Bearer {access_token}',\n",
     "    }\n",
-    "    response = requests.get(users_url, headers=headers)\n",
+    "    response = requests.get(user_url, headers=headers)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    return response.json()\n",
@@ -49,9 +49,9 @@
     "        access_token = get_access_token(KEY, SECRET)\n",
     "        \n",
     "        # Use access token to get user's courses\n",
-    "        user = get_user(access_token, USERS_URL)\n",
+    "        user = get_user(access_token, A_USER_URL)\n",
     "        \n",
-    "        print(\"User fetched successfully.\")\n",
+    "        print(\"A user fetched successfully.\")\n",
     "        print(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
@@ -71,7 +71,7 @@
     "# This is meant for demonstration purposes only. To be complete you would cache the access token,\n",
     "# and have session management for each user that is using the web application.\n",
     "from flask import Flask\n",
-    "#This cell demonstrates a 2 Legged-Oauth call to Blackboard Learn\n",
+    "\n",
     "try:\n",
     "    import Config\n",
     "except ModuleNotFoundError:\n",
@@ -82,9 +82,9 @@
     "# Configuration\n",
     "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
     "SECRET = Config.config['secret']\n",
-    "BLACKBOARD_DOMAIN = Config.config['domain']\n",
+    "BLACKBOARD_DOMAIN = Config.config['blackboard_domain']\n",
     "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
-    "USERS_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
+    "A_USER_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
     "\n",
     "# Import the 'datetime' module to work with date and time\n",
     "import datetime\n",
@@ -107,12 +107,12 @@
     "    print(\"Authentication successful.\")\n",
     "    return response.json().get('access_token')\n",
     "\n",
-    "def get_user(access_token, users_url):\n",
+    "def get_user(access_token, user_url):\n",
     "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
     "    headers = {\n",
     "        'Authorization': f'Bearer {access_token}',\n",
     "    }\n",
-    "    response = requests.get(users_url, headers=headers)\n",
+    "    response = requests.get(user_url, headers=headers)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    return response.json()\n",
@@ -122,16 +122,16 @@
     "def hello_world():\n",
     "    return 'Hello there, 2LO world!'\n",
     "\n",
-    "@app.route('/user')\n",
+    "@app.route('/auser')\n",
     "def user():\n",
     "    try:\n",
     "        # Authenticate and get access token\n",
     "        access_token = get_access_token(KEY, SECRET)\n",
     "        \n",
     "        # Use access token to get user's courses\n",
-    "        user = get_user(access_token, USERS_URL)\n",
+    "        user = get_user(access_token, A_USER_URL)\n",
     "        \n",
-    "        print(\"User fetched successfully.\")\n",
+    "        print(\"A user fetched successfully.\")\n",
     "        return(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
