moved all the code to src directory

--- a/src/LearnREST2LO.ipynb
+++ b/src/LearnREST2LO.ipynb
@@ -14,31 +14,33 @@
     "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "\n",
     "import requests\n",
+    "#NOTE!! Corporate ZScaler Internet Security Breaks SSL Cert Verification\n",
+    "#That's why we set verify=False on our requests.\n",
     "\n",
     "# Configuration\n",
     "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
     "SECRET = Config.config['secret']\n",
     "BLACKBOARD_DOMAIN = Config.config['blackboard_domain']\n",
     "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
-    "A_USER_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
+    "USERS_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users'\n",
     "\n",
     "def get_access_token(key, secret):\n",
     "    \"\"\"Authenticate with Blackboard Learn REST API using 2-legged OAuth.\"\"\"\n",
     "    payload = {\n",
     "        'grant_type': 'client_credentials',\n",
     "    }\n",
-    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload)\n",
+    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload, verify=False)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    print(\"Authentication successful.\")\n",
     "    return response.json().get('access_token')\n",
     "\n",
-    "def get_user(access_token, user_url):\n",
+    "def get_users(access_token, users_url):\n",
     "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
     "    headers = {\n",
     "        'Authorization': f'Bearer {access_token}',\n",
     "    }\n",
-    "    response = requests.get(user_url, headers=headers)\n",
+    "    response = requests.get(users_url, headers=headers, verify=False)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    return response.json()\n",
@@ -49,9 +51,9 @@
     "        access_token = get_access_token(KEY, SECRET)\n",
     "        \n",
     "        # Use access token to get user's courses\n",
-    "        user = get_user(access_token, A_USER_URL)\n",
+    "        user = get_users(access_token, USERS_URL)\n",
     "        \n",
-    "        print(\"A user fetched successfully.\")\n",
+    "        print(\"Users fetched successfully.\")\n",
     "        print(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
@@ -78,13 +80,15 @@
     "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "\n",
     "import requests\n",
+    "#NOTE!! Corporate ZScaler Internet Security Breaks SSL Cert Verification\n",
+    "#That's why we set verify=False on our requests.\n",
     "\n",
     "# Configuration\n",
     "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
     "SECRET = Config.config['secret']\n",
     "BLACKBOARD_DOMAIN = Config.config['blackboard_domain']\n",
     "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
-    "A_USER_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
+    "USERS_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users'\n",
     "\n",
     "# Import the 'datetime' module to work with date and time\n",
     "import datetime\n",
@@ -101,18 +105,18 @@
     "    payload = {\n",
     "        'grant_type': 'client_credentials',\n",
     "    }\n",
-    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload)\n",
+    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload, verify=False)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    print(\"Authentication successful.\")\n",
     "    return response.json().get('access_token')\n",
     "\n",
-    "def get_user(access_token, user_url):\n",
-    "    \"\"\"Make a REST API call to get a user's courses.\"\"\"\n",
+    "def get_users(access_token, users_url):\n",
+    "    \"\"\"Make a REST API call to get a users.\"\"\"\n",
     "    headers = {\n",
     "        'Authorization': f'Bearer {access_token}',\n",
     "    }\n",
-    "    response = requests.get(user_url, headers=headers)\n",
+    "    response = requests.get(users_url, headers=headers, verify=False)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    return response.json()\n",
@@ -120,18 +124,18 @@
     "\n",
     "@app.route('/')\n",
     "def hello_world():\n",
-    "    return 'Hello there, 2LO world!'\n",
+    "    return 'Hello there, 2LO world! Try /users!'\n",
     "\n",
-    "@app.route('/auser')\n",
-    "def user():\n",
+    "@app.route('/users')\n",
+    "def users():\n",
     "    try:\n",
     "        # Authenticate and get access token\n",
     "        access_token = get_access_token(KEY, SECRET)\n",
     "        \n",
     "        # Use access token to get user's courses\n",
-    "        user = get_user(access_token, A_USER_URL)\n",
+    "        user = get_users(access_token, USERS_URL)\n",
     "        \n",
-    "        print(\"A user fetched successfully.\")\n",
+    "        print(\"Users fetched successfully.\")\n",
     "        return(user)  # You might want to format this output or handle it differently depending on your needs\n",
     "    except requests.exceptions.HTTPError as err:\n",
     "        print(f\"HTTP error occurred: {err}\")\n",
@@ -141,6 +145,14 @@
     "if __name__ == '__main__':\n",
     "    app.run(port=5210)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "757b73f2-ec42-44bd-aa16-081e5a16a224",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -159,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
