--- a/src/LearnREST3LO.ipynb
+++ b/src/LearnREST3LO.ipynb
@@ -19,6 +19,8 @@
     "    print(\"Config module not found. Did you copy Config_template.py to Config.py and set values?\")\n",
     "\n",
     "import requests\n",
+    "#NOTE!! Corporate ZScaler Internet Security Breaks SSL Cert Verification\n",
+    "#That's why we set verify=False on our requests.\n",
     "\n",
     "# Configuration\n",
     "KEY = Config.config['key'] #Learn doc calls this a key. Industry may ref as CLIENT_ID\n",
@@ -47,7 +49,7 @@
     "    payload = {\n",
     "        'grant_type': 'client_credentials',\n",
     "    }\n",
-    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload)\n",
+    "    response = requests.post(TOKEN_URL, auth=(key, secret), data=payload, verify=False)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    print(\"Authentication successful.\")\n",
@@ -59,7 +61,7 @@
     "    headers = {\n",
     "        'Authorization': f'Bearer {access_token}',\n",
     "    }\n",
-    "    response = requests.get(user_url, headers=headers)\n",
+    "    response = requests.get(user_url, headers=headers, verify=False)\n",
     "    response.raise_for_status()  # Raises stored HTTPError, if one occurred.\n",
     "    \n",
     "    return response.json()\n",
@@ -112,7 +114,7 @@
     "        'client_id': KEY,\n",
     "        'client_secret': SECRET\n",
     "    }\n",
-    "    response = requests.post(TOKEN_URL, auth=(KEY, SECRET), data=payload)\n",
+    "    response = requests.post(TOKEN_URL, auth=(KEY, SECRET), data=payload, verify=False)\n",
     "    print(response.json())\n",
     "    return response.json()\n",
     "\n",
@@ -137,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
