added logout example and tested in src aok

--- a/src/LearnREST3LO.ipynb
+++ b/src/LearnREST3LO.ipynb
@@ -31,6 +31,7 @@
     "AUTH_BASE_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/authorizationcode'\n",
     "TOKEN_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/oauth2/token'\n",
     "A_USER_URL = f'https://{BLACKBOARD_DOMAIN}/learn/api/public/v1/users/userName:astudent'\n",
+    "LOGOUT_URL = f'https://{BLACKBOARD_DOMAIN}/webapps/login/?action=logout'\n",
     "\n",
     "# Import the 'datetime' module to work with date and time\n",
     "import datetime\n",
@@ -96,6 +97,11 @@
     "    auth_url = f\"{AUTH_BASE_URL}?response_type=code&client_id={KEY}&redirect_uri={REDIRECT_URI}\"\n",
     "    return redirect(auth_url)\n",
     "\n",
+    "@app.route('/logout')\n",
+    "def logout():\n",
+    "    session['access_token']=None\n",
+    "    return redirect(LOGOUT_URL)\n",
+    "\n",
     "@app.route('/callback')\n",
     "def callback():\n",
     "    \"\"\"Exchange code for a token and fetch user's courses.\"\"\"\n",
@@ -121,6 +127,14 @@
     "if __name__ == '__main__':\n",
     "    app.run(port=5310)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a622306-b1c3-4020-b960-60ae9f223e67",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -139,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
